Make game button more prominent

--- a/profile.html
+++ b/profile.html
@@ -235,9 +235,10 @@
 <body>
     <!-- Game Play Banner at Top -->
     <div class="game-banner">
+        <h2 style="color: white; margin-bottom: 15px; font-size: 24px;">🎮 Try My Game!</h2>
         <a href="game.html" class="play-button">
             <div class="play-icon"></div>
-            <span>🎮 Play Code Defender Game</span>
+            <span>Play Code Defender</span>
         </a>
     </div>
 
